--- a/index.html
+++ b/index.html
@@ -1,24 +1,69 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>simple crystal game</title>
+  <title>David's Crystal Game!</title>
   <style type="text/css">
   	/*
   		we threw in some styling to make the picture fit on the page better
 	*/
     .crystalImage {
-      width: 200px;
-      height: 200px;
+      width: 25%;
+      height: 25%;
+      cursor: pointer;
     }
+
+    #number {
+      font-size: 45px;
+    }
+
+    #yourNumber {
+      font-size: 45px;
+
+    }
+    .lumberjack{
+     height: 250px;
+     margin-right: 40px;
+    }  
+    
   </style>
+
+  <link rel="stylesheet" href="http://bootswatch.com/spacelab/bootstrap.min.css">
+
+
+
 </head>
 <body>
+<div class="container">
+<div class="jumbotron"><img src="assets/images/lumberjack.png" class="pull-left lumberjack" />
+  <h1>Lumberjack Wood Collector Game!</h1>
+  <p>Pick the piece of wood to add up to the </p>
+</div>
 
-<p><span id="number"></span></p>
 
-<p><span id="yourNumber"></span></p>
+<div class="row">
+  <div class="col-lg-6"><div class="panel panel-primary">
+  <div class="panel-heading">
+    <h3 class="panel-title">Your Goal:</h3>
+  </div>
+  <div class="panel-body">
+<p><span id="number"></span></p>  </div>
+</div></div>
+  <div class="col-lg-6"><div class="panel panel-success">
+  <div class="panel-heading">
+    <h3 class="panel-title">Your Guess:</h3>
+  </div>
+  <div class="panel-body">
+    <p><span id="yourNumber"></span></p>
+  </div>
+</div></div>
+</div>
+
+
+
 
 <div id="crystals">
+</div>
+
 </div>
 
 <!-- we added jQuery -->
