Added comments in js file

--- a/index.html
+++ b/index.html
@@ -6,28 +6,12 @@
   	/*
   		we threw in some styling to make the picture fit on the page better
 	*/
-    .crystalImage {
-      width: 25%;
-      height: 25%;
-      cursor: pointer;
-    }
 
-    #number {
-      font-size: 45px;
-    }
-
-    #yourNumber {
-      font-size: 45px;
-
-    }
-    .lumberjack{
-     height: 250px;
-     margin-right: 40px;
-    }  
     
   </style>
 
   <link rel="stylesheet" href="http://bootswatch.com/spacelab/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/style.css"
 
 
 
