heroku init of project

--- a/index.html
+++ b/index.html
@@ -2,13 +2,7 @@
 <html>
 <head>
   <title>David's Crystal Game!</title>
-  <style type="text/css">
-  	/*
-  		we threw in some styling to make the picture fit on the page better
-	*/
 
-    
-  </style>
 
   <link rel="stylesheet" href="http://bootswatch.com/spacelab/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/style.css"
@@ -20,7 +14,7 @@
 <div class="container">
 <div class="jumbotron"><img src="assets/images/lumberjack.png" class="pull-left lumberjack" />
   <h1>Lumberjack Wood Collector Game!</h1>
-  <p>Pick the piece of wood to add up to the </p>
+  <p>Pick the piece of wood to add up to the goal.  Each wood piece has a different amount.</p>
 </div>
 
 
